add swagger for routes
